--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -239,6 +239,7 @@ button:hover {
   }
   .quote {
    font-size: 16px;
+   font-weight: bold;
   }
   article {
     margin: 30px;
@@ -247,5 +248,7 @@ button:hover {
     font-size: 10px;
     right: 12px;
     padding: 6px 9px;
+    bottom: 20px;
+  right: 400px;
   }
 }
