--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -132,7 +132,7 @@ main {
   font-size: 14px;
   position: fixed;
   bottom: 20px;
-  right: 400px;
+  right: 500px;
   padding: 8px 12px;
   border-radius: 15px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 1);
@@ -246,9 +246,16 @@ button:hover {
   }
   .go-up {
     font-size: 10px;
-    right: 12px;
     padding: 6px 9px;
-    bottom: 20px;
-  right: 400px;
+    bottom: 500px;
+    right: 20px;
+  }
+}
+
+
+@media (max-width: 1800px) {
+  .go-up {
+    bottom: 500px;
+    right: 20px;
   }
 }
